--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-paginate": "^8.3.0",
     "toast": "^0.5.4",
     "use-debounce": "^10.0.6",
-    "yup": "^1.7.1"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20",
